fix minor layout bug

--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -57,7 +57,7 @@
     padding: 8px;
     border: 1px solid $card-border-color;
     border-radius: 3px;
-    margin-top: 15px;
+    margin-top: 16px;
     // margin-bottom: 10px;
     display: flex;
     flex-direction: row;
